Don't seek to the end if write buffer is empty (in append modes).

PR:             204156
MFC after:      1 week